--- a/views/sis/sis.ejs
+++ b/views/sis/sis.ejs
@@ -1,4 +1,14 @@
-<%- include("../layaouts/cabecera.ejs") %>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>SisBombers</title>
+        <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
+    </head>
+    <body>
+        <main class="conteiner-fluid">
             <div class="row">
                 <div class="col-md-6 p-4 my-auto">
                     <form method="post" class="card card-body" id="datosForm" action="/sis">
@@ -41,7 +51,14 @@
                     </table>
                 </div>
             </div>
-<%- include("../layaouts/footer.ejs") %>
+        </main> 
+        <script>
+            function dateFormat(){
+                date = new Date().toLocaleDateString()
+            }
+        </script>
+    </body>
+</html>
 
 
 
